[gd_scene load_steps=27 format=2]

[ext_resource path="res://Rooms/menu_rooms/weapon_labs/weapon_position_pick.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Menu_backgrounds/MENUOVERLAYER1.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Menu_buttons/menu_button-export1.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Menu_buttons/Better_menu-expor_hovort.png" type="Texture" id=4]
[ext_resource path="res://VT323-Regular.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Sprites/Menu_buttons/menu_button-export1-expor2td.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Menu_backgrounds/MENUOVERLAYE2_black.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Menu_backgrounds/hand.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Menu_backgrounds/Sprite-0002.png" type="Texture" id=9]
[ext_resource path="res://Projectile/fire/Flamethrower/light_32x32.png" type="Texture" id=10]
[ext_resource path="res://Rooms/menu_rooms/weapon_labs/selected.gd" type="Script" id=11]

[sub_resource type="DynamicFont" id=2]
size = 25
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -8, 450 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "down_slide"
step = 0.06
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.96 ),
"transitions": PoolRealArray( 2.92817, 1 ),
"update": 0,
"values": [ Vector2( -8, 450 ), Vector2( -8, 550 ) ]
}

[sub_resource type="DynamicFont" id=1]
size = 30
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[sub_resource type="Animation" id=7]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 64, 128 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "slide down"
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 1 ),
"transitions": PoolRealArray( 0.341511, 2.92817, 1 ),
"update": 0,
"values": [ Vector2( 64, 128 ), Vector2( 64, 100 ), Vector2( 64, 550 ) ]
}

[sub_resource type="Animation" id=9]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 64, 128 ) ]
}

[sub_resource type="Animation" id=10]
resource_name = "slide down"
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 1 ),
"transitions": PoolRealArray( 0.341511, 2.92817, 1 ),
"update": 0,
"values": [ Vector2( 64, 128 ), Vector2( 64, 100 ), Vector2( 64, 550 ) ]
}

[sub_resource type="Animation" id=11]
resource_name = "slide down middle"
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 1 ),
"transitions": PoolRealArray( 0.341511, 2.92817, 1 ),
"update": 0,
"values": [ Vector2( 384, 128 ), Vector2( 384, 100 ), Vector2( 384, 550 ) ]
}

[sub_resource type="Animation" id=12]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 64, 128 ) ]
}

[sub_resource type="Animation" id=13]
resource_name = "slide down"
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 1 ),
"transitions": PoolRealArray( 0.341511, 2.92817, 1 ),
"update": 0,
"values": [ Vector2( 64, 128 ), Vector2( 64, 100 ), Vector2( 64, 550 ) ]
}

[sub_resource type="Animation" id=14]
resource_name = "slide down middle"
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 1 ),
"transitions": PoolRealArray( 0.341511, 2.92817, 1 ),
"update": 0,
"values": [ Vector2( 384, 128 ), Vector2( 384, 100 ), Vector2( 384, 550 ) ]
}

[sub_resource type="Animation" id=15]
resource_name = "slide down right"
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 1 ),
"transitions": PoolRealArray( 0.341511, 2.92817, 1 ),
"update": 0,
"values": [ Vector2( 704, 128 ), Vector2( 704, 100 ), Vector2( 704, 550 ) ]
}

[sub_resource type="DynamicFont" id=5]
size = 80
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_char = -2
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=6]
size = 60
font_data = ExtResource( 5 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_scale = Vector2( 0.5, 0.5 )
script = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]

[node name="black" type="Sprite" parent="."]
position = Vector2( 480, 270 )
scale = Vector2( 2, 2 )
texture = ExtResource( 7 )

[node name="back" type="TextureButton" parent="."]
margin_left = -8.0
margin_top = 450.0
margin_right = 56.0
margin_bottom = 482.0
rect_scale = Vector2( 2.5, 3 )
texture_normal = ExtResource( 3 )
texture_hover = ExtResource( 4 )

[node name="Label3" type="Label" parent="back"]
margin_left = 16.0
margin_right = 96.0
margin_bottom = 50.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_y = 3
custom_fonts/font = SubResource( 2 )
text = "Back"

[node name="AnimationPlayer" type="AnimationPlayer" parent="back"]
anims/RESET = SubResource( 3 )
anims/down_slide = SubResource( 4 )

[node name="1" type="TextureButton" parent="."]
margin_left = 64.0
margin_top = 128.0
margin_right = 128.0
margin_bottom = 160.0
rect_scale = Vector2( 3, 6 )
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 4 )

[node name="Label" type="Label" parent="1"]
margin_left = 20.0
margin_right = 60.0
margin_bottom = 30.0
rect_scale = Vector2( 2, 1 )
custom_fonts/font = SubResource( 1 )
text = "1"

[node name="AnimationPlayer" type="AnimationPlayer" parent="1"]
anims/RESET = SubResource( 7 )
"anims/slide down" = SubResource( 8 )

[node name="2" type="TextureButton" parent="."]
margin_left = 64.0
margin_top = 128.0
margin_right = 128.0
margin_bottom = 160.0
rect_scale = Vector2( 3, 6 )
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 4 )

[node name="Label" type="Label" parent="2"]
margin_left = 20.0
margin_right = 60.0
margin_bottom = 30.0
rect_scale = Vector2( 2, 1 )
custom_fonts/font = SubResource( 1 )
text = "2"

[node name="AnimationPlayer" type="AnimationPlayer" parent="2"]
anims/RESET = SubResource( 9 )
"anims/slide down" = SubResource( 10 )
"anims/slide down middle" = SubResource( 11 )

[node name="3" type="TextureButton" parent="."]
margin_left = 64.0
margin_top = 128.0
margin_right = 128.0
margin_bottom = 160.0
rect_scale = Vector2( 3, 6 )
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 4 )

[node name="Label" type="Label" parent="3"]
margin_left = 20.0
margin_right = 60.0
margin_bottom = 30.0
rect_scale = Vector2( 2, 1 )
custom_fonts/font = SubResource( 1 )
text = "3"

[node name="AnimationPlayer" type="AnimationPlayer" parent="3"]
anims/RESET = SubResource( 12 )
"anims/slide down" = SubResource( 13 )
"anims/slide down middle" = SubResource( 14 )
"anims/slide down right" = SubResource( 15 )

[node name="static" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.419608 )
position = Vector2( 480, 270 )
scale = Vector2( 2, 2 )
texture = ExtResource( 9 )

[node name="background" type="Sprite" parent="."]
position = Vector2( 480, 270 )
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( 512, 256 )
scale = Vector2( 2, 1 )
texture = ExtResource( 10 )
texture_scale = 15.0

[node name="instructions" type="Label" parent="."]
margin_left = 123.0
margin_top = 14.0
margin_right = 1145.0
margin_bottom = 94.0
rect_scale = Vector2( 0.7, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_y = 3
custom_fonts/font = SubResource( 5 )
text = "Pick which slot the weapon goes in"
align = 1

[node name="selected" type="Label" parent="."]
margin_left = 180.0
margin_top = 384.0
margin_right = 780.0
margin_bottom = 444.0
custom_fonts/font = SubResource( 6 )
text = "Slot curretnly selected:"
script = ExtResource( 11 )

[node name="hand" type="Sprite" parent="."]
position = Vector2( 1600, 64 )
scale = Vector2( 5, 5 )
texture = ExtResource( 8 )
centered = false
offset = Vector2( -20, -15 )

[connection signal="num_change" from="." to="selected" method="_on_Control_num_change"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="pressed" from="back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="1" to="." method="_on_1_pressed"]
[connection signal="pressed" from="2" to="." method="_on_2_pressed"]
[connection signal="pressed" from="3" to="." method="_on_3_pressed"]
